--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href=".git\style.css">
+</head>
 <body>
 <h1>Welcome to the home of Southern Methodist University GitHub</h1>
 <p>I'm hosted with GitHub Pages.</p>
