--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="./style.css">
+<link rel="stylesheet" type="text/css" href="https://github.com/SouthernMethodistUniversity/southernmethodistuniversity.github.io/blob/master/style.css">
 </head>
 <body>
 <h1>Welcome to the home of Southern Methodist University GitHub</h1>
