--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <link rel="stylesheet" type="text/css" href="https://github.com/SouthernMethodistUniversity/southernmethodistuniversity.github.io/blob/master/style.css">
 </head>
 <body>
-<h1>Welcome to the home of Southern Methodist University GitHub</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>For info on SMU GitHub, please visit: <a href="https://www.smu.edu/OIT/Services/GitHub">The SMU OIT GitHub Service Page</h1>
 </body>
 </html>
