--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+  #rcorners1 {
+  border-radius: 25px;
+  color: #354CA1;
+  background: #F9C80E;
+  padding: 20px; 
+  height: 30px;
+  font-size: 30px;
+  font-weight: bold;
+}
+</style>
 <link rel="stylesheet" type="text/css" href="https://github.com/SouthernMethodistUniversity/southernmethodistuniversity.github.io/blob/master/style.css">
 </head>
-<body>
-<h1>For info on SMU GitHub, please visit: <a href="https://www.smu.edu/OIT/Services/GitHub">The SMU OIT GitHub Service Page</h1>
+<body style = "background-color: #CC0035;"}>
+<p id="rcorners1">For info on SMU GitHub, please visit: <a href="https://www.smu.edu/OIT/Services/GitHub">The SMU OIT GitHub Service Page</p>
 </body>
 </html>
