--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head>
-<style>
-  #rcorners1 {
-  border-radius: 25px;
-  color: #354CA1;
-  background: #F9C80E;
-  padding: 20px; 
-  height: 30px;
-  font-size: 30px;
-  font-weight: bold;
-}
-</style>
-</head>
-<body style = "background-color: #CC0035;"}>
-<p id="rcorners1">For info on SMU GitHub, please visit: <a href="https://www.smu.edu/OIT/Services/GitHub">The SMU OIT GitHub Service Page</p>
-</body>
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://www.smu.edu/OIT/Services/GitHub/</title>
+<meta http-equiv="refresh" content="0; URL=https://www.smu.edu/OIT/Services/GitHub">
+<link rel="canonical" href="https://example.com/">
